Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83240

reset() on QAudioOutput doesn't trigger state change

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.0 RC
    • 5.14.1
    • Multimedia
    • None
    • Windows
    • c3b9a8a6bc2a3dc3907f1cc349a7279916b599a4 (qt/qtmultimedia/5.14)

      Calling reset() on a QAudioOutput changes the state of the QAudioOutput to QAudio::StoppedState, but it doesn't emit the stateChanged signal.  I've tested this on Linux and Windows 10, and it only seems to be a bug on Windows 10.  On Linux, calling reset() changes state to QAudio::StoppedState and emits a stateChanged signal, as I would expect.  I've not tested it on MacOS.  Also, I discovered this while developing in Python3 with PyQt, but given the behavior of the bug, I strongly suspect it is a bug in the Qt libraries, not the PyQt bindings.  I've not yet had any time to try testing this in C++.  Thank you!

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            valentyn.doroshchuk Valentyn Doroshchuk
            stuckyb Brian Stucky
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes