WindowsAudio: Send stateChanged when QAudioOutput::reset() is called

Fixes: QTBUG-83240
Change-Id: Iaa01ee4553f4c0c4d9a1ad829e65b40f13d3847d
Reviewed-by: Andy Shaw <andy.shaw@qt.io>